# reg_helper

./: Cargo.toml
.github/workflows/: rust.yml
src/: command.rs  config.rs  config.toml  cookie.rs  email.rs  error.rs  main.rs  register.rs  switch.rs  webdrive.rs
tests/: register.rsd  webdrive_test.rsd
