[package]
name = "reg_helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.7.2"
serde = "1.0.152"
serde_derive = "1.0.152"
actix-web = "4"
imap = "2.4.1"
reqwest = { version = "0.11.22", features = ["blocking"] }
lazy_static = "1.4.0"
native-tls = "0.2.11"
chrono = "0.4.31"
regex = "1.10.2"
tokio = { version = "1.34.0", features = ["macros"] }
mail-parser = "0.9.1"
scraper = "0.18.1"
