[package]
name = "reg_helper"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.19"
serde = "1.0.217"
serde_derive = "1.0.217"
actix-web = "4"
imap = "2.4.1"
reqwest = { version = "0.12.12", features = ["blocking"] }
lazy_static = "1.5.0"
native-tls = "0.2.12"
chrono = "0.4.39"
regex = "1.11.1"
tokio = { version = "1.42.0", features = ["macros"] }
mail-parser = "0.9.4"
scraper = "0.22.0"
thirtyfour = "0.34.0"
selenium-manager = { git = "https://github.com/SeleniumHQ/selenium", branch = "trunk" }
color-eyre = "0.6.3"
thiserror = "2"
clap = "4.5.23"
